--- a/src/assets/font/iconfont.css
+++ b/src/assets/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2608876 */
-  src: url('iconfont.woff2?t=1626621199799') format('woff2'),
-       url('iconfont.woff?t=1626621199799') format('woff'),
-       url('iconfont.ttf?t=1626621199799') format('truetype');
+  src: url('iconfont.woff2?t=1676361236011') format('woff2'),
+       url('iconfont.woff?t=1676361236011') format('woff'),
+       url('iconfont.ttf?t=1676361236011') format('truetype');
 }
 
 .iconfont {
@@ -13,8 +13,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-icon_MyMusicBook:before {
-  content: "\e6bb";
+.icon-guanbiyinliang:before {
+  content: "\e70d";
+}
+
+.icon-jiadayinliang:before {
+  content: "\e70e";
 }
 
 .icon-shuaxin:before {
